whoami/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: whoami
  name: whoami-svc
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: whoami
