whoami/ingress.yml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: whoami-ingress
#   annotations:
#     traefik.ingress.kubernetes.io/router.entrypoints: web
  
# spec:
#   rules:
#     - host: traefik.${domain}
#       http:
#         paths:
#           - path: /whoami
#             pathType: Prefix
#             backend:
#               service:
#                 name: whoami
#                 port:
#                   number: 80

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: whoami
#   annotations:
#     traefik.ingress.kubernetes.io/router.entrypoints: web
# spec:
#   rules:
#   - http:
#       paths:
#       - path: /whoami
#         pathType: Exact
#         backend:
#           service:
#             name: whoami
#             port:
#               number: 80


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: whoami
  name: whoami-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        -  whoami.private.antoniocaccamo.work
      secretName: tls-secret
  rules:
    - host: whoami.private.antoniocaccamo.work
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: whoami-svc
              port:
                number: 80
